--- a/style.css
+++ b/style.css
@@ -1159,8 +1159,8 @@ footer
 
 #portfolio-1
 {
-    background-color: #221c5a;
-    background-image:url("demo-images/background_img_05b.jpg");
+    background-color: #434343;
+    /* background-image:url("demo-images/background_img_05b.jpg"); */
     background-repeat: no-repeat;
     background-position: center top;
     background-size: auto;
